--- a/front-end/src/app/game/recap/recap.component.scss
+++ b/front-end/src/app/game/recap/recap.component.scss
@@ -15,6 +15,10 @@
     margin-top: 2rem;
 }*/
 
+.questionAndImage {
+    text-align: center;
+}
+
 .frame {
     height: 8rem;
     width: 12rem;
@@ -36,8 +40,11 @@
     width: 15rem;
     text-align: center;
     font-size: 3rem;
-    position: fixed;
+    margin-top: 1rem;
+    margin-left: auto;
+    margin-right: auto;
+    /*position: fixed;
     bottom: 5rem;
-    left: 12rem;
+    left: 12rem;*/
     //right: 10rem;
 }
