--- a/front-end/src/app/game/runner/runner.component.scss
+++ b/front-end/src/app/game/runner/runner.component.scss
@@ -5,6 +5,7 @@
 
 
 .questionQuiz {
+    text-align: center;
     font-size: 100%;
 }
 
